--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     margin: auto;
-    max-width: 1420px;
+    max-width: 100%;
     height: 100%;
     padding-top: 80px;
     background-color: $main-bg-color;
