--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -288,7 +288,7 @@ body {
 
 .wrapper {
   margin: auto;
-  max-width: 1420px;
+  max-width: 100%;
   height: 100%;
   padding-top: 80px;
   background-color: #f5f6fb;
