--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -4,14 +4,10 @@
 @import "strength-bar";
 @import "spinner";
 
-iframe[seamless] {
-    border: none!important;
-}
-
 body {
     margin: 0px;
     font-family: Helvetica, 'Roboto', sans-serif;
-    background: black;
+    background-color: $main-bg-color;
 }
 
 .wrapper {
@@ -19,5 +15,6 @@ body {
     max-width: 100%;
     height: 100%;
     padding-top: 80px;
+    padding-bottom: 200px;
     background-color: $main-bg-color;
 }
