--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -194,6 +194,18 @@ button:hover {
     margin-left: 0px !important;
   }
 }
+@media screen and (max-width: 542px) {
+  #account-section {
+    position: relative;
+    width: 90%;
+    padding: 15px 0;
+    margin: 0 auto;
+    text-align: center;
+  }
+  #account-section .account-form {
+    padding: 15px;
+  }
+}
 /* FORM */
 /* COMMON COLORS */
 /* INPUTS */
@@ -276,14 +288,10 @@ button:hover {
     transform: scale(1);
   }
 }
-iframe[seamless] {
-  border: none !important;
-}
-
 body {
   margin: 0px;
   font-family: Helvetica, "Roboto", sans-serif;
-  background: black;
+  background-color: #f5f6fb;
 }
 
 .wrapper {
@@ -291,6 +299,7 @@ body {
   max-width: 100%;
   height: 100%;
   padding-top: 80px;
+  padding-bottom: 200px;
   background-color: #f5f6fb;
 }
 
