Prevents Mobile WebPage Zoom

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -206,6 +206,13 @@ button:hover {
     padding: 15px;
   }
 }
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus,
+textarea:focus,
+input:focus {
+    font-size: 16px;
+  }
+}
 /* FORM */
 /* COMMON COLORS */
 /* INPUTS */
